chore: Undo buggy changes in html reports

--- a/packages/html-reporter/src/testResultView.css
+++ b/packages/html-reporter/src/testResultView.css
@@ -41,7 +41,7 @@
 }
 
 .test-result-error-message {
-  white-space: pre-wrap;
+  white-space: pre;
   font-family: monospace;
   overflow: auto;
   flex: none;
