--- a/packages/web/src/components/toolbarButton.css
+++ b/packages/web/src/components/toolbarButton.css
@@ -22,6 +22,7 @@
   background: transparent;
   padding: 4px;
   margin-left: 10px;
+  cursor: pointer;
   display: inline-flex;
   align-items: center;
 }
