feat(trace-viewer): add parameters copy to clip
Add copy to clipboard icon near parameters value

Fixes #19582

--- a/packages/trace-viewer/src/ui/callTab.css
+++ b/packages/trace-viewer/src/ui/callTab.css
@@ -49,12 +49,31 @@
 
 .call-line {
   padding: 4px 0 4px 6px;
-  flex: none;
+  display: flex;
   align-items: center;
   text-overflow: ellipsis;
   overflow: hidden;
   line-height: 18px;
   white-space: nowrap;
+}
+
+.call-line__copy-icon {
+  visibility: hidden;
+  margin-right: 4px;
+}
+
+.call-line:hover .call-line__copy-icon {
+  visibility: visible;
+}
+
+.call-value {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  flex: 1;
+}
+
+.call-value::before {
+  content: '\00a0';
 }
 
 .call-line .datetime,
