feat(html): skipped v. fixme filter
Resolves #19336.
Relates #15239.

--- a/packages/html-reporter/src/testFileView.css
+++ b/packages/html-reporter/src/testFileView.css
@@ -64,6 +64,6 @@
   fill: var(--color-fg-muted);
 }
 
-.test-file-test-outcome-skipped {
+.test-file-test-outcome-skipped, .test-file-test-outcome-fixme {
   color: var(--color-fg-muted);
 }
