feat(trace viewer): render selectors as locators
Drive-by: fix more places with SerializedValue rendering.

--- a/packages/trace-viewer/src/ui/callTab.css
+++ b/packages/trace-viewer/src/ui/callTab.css
@@ -77,12 +77,17 @@
 }
 
 .call-line .datetime,
-.call-line .string {
+.call-line .string,
+.call-line .locator {
   color: var(--orange);
 }
 
 .call-line .number,
+.call-line .bigint,
 .call-line .boolean,
+.call-line .symbol,
+.call-line .undefined,
+.call-line .function,
 .call-line .object {
   color: var(--blue);
 }
