chore: flag text mismatch when editing

--- a/packages/playwright-core/src/server/injected/highlight.css
+++ b/packages/playwright-core/src/server/injected/highlight.css
@@ -223,10 +223,11 @@ textarea.text-editor {
   border: none;
   margin: 10px;
   color: #333;
+  outline: 1px solid transparent !important;
 }
 
-textarea.text-editor:focus {
-  outline: none;
+textarea.text-editor.does-not-match {
+  outline: 1px solid red !important;
 }
 
 x-div {
