fix(recorder): resize of assert overlay textarea

--- a/packages/playwright-core/src/server/injected/highlight.css
+++ b/packages/playwright-core/src/server/injected/highlight.css
@@ -45,7 +45,6 @@ x-pw-dialog {
   flex-direction: column;
   position: absolute;
   width: 500px;
-  height: 200px;
   z-index: 10;
 }
 
@@ -213,6 +212,8 @@ textarea.text-editor {
   margin: 6px;
   color: #333;
   outline: 1px solid transparent !important;
+  min-height: 130px;
+  resize: vertical;
 }
 
 textarea.text-editor.does-not-match {
