--- a/packages/trace-viewer/src/ui/workbenchLoader.css
+++ b/packages/trace-viewer/src/ui/workbenchLoader.css
@@ -122,3 +122,9 @@ body.dark-mode .drop-target {
   text-overflow: ellipsis;
   text-wrap: nowrap;
 }
+
+html, body {
+  min-width: 550px;
+  min-height: 450px;
+  overflow: auto;
+}
