--- a/packages/trace-viewer/src/ui/workbenchLoader.css
+++ b/packages/trace-viewer/src/ui/workbenchLoader.css
@@ -123,6 +123,7 @@ body.dark-mode .drop-target {
   text-wrap: nowrap;
 }
 
+/* Limit to a reasonable minimum viewport */
 html, body {
   min-width: 550px;
   min-height: 450px;
