Write test cases for copy annotation text feature

--- a/packages/html-reporter/src/testCaseView.css
+++ b/packages/html-reporter/src/testCaseView.css
@@ -75,12 +75,12 @@
   flex-wrap: wrap;
 }
 
-#annotation-copy-button{
+.annotation-copy-button{
   padding-left: 3px;
   display: none;
 }
 
-.test-case-annotation:hover #annotation-copy-button{
+.test-case-annotation:hover .annotation-copy-button{
   padding-left: 3px;
   display: inline;
 }
