--- a/packages/trace-viewer/src/ui/sourceTab.css
+++ b/packages/trace-viewer/src/ui/sourceTab.css
@@ -31,3 +31,13 @@
   box-shadow: var(--vscode-scrollbar-shadow) 0 6px 6px -6px;
   z-index: 10;
 }
+
+.copy-icon.codicon {
+  display: block;
+  cursor: pointer;
+}
+
+.source-copy-to-clipboard {
+  display: block;
+  padding-left: 4px;
+}
